# proteusPy

./: .gitattributes  .gitignore  .mcp.json  .pdocconfig.py  .pre-commit-config.yaml  .travis.yml  2q7q_dse.csv  2q7q_seqsim.csv  Archive.txt  CHANGELOG.md  CLAUDE.md  DisulfideAnalysis.ipynb  DisulfideDownloader.py  DisulfideExceptions.py  DisulfideList.py  Disulfide_bbedit.py  Disulfide_checker.ipynb  FONT_FIX_README.md  MANIFEST.in  Makefile.old  Npyproject.toml  Opyproject.toml  Osetup.py  README.md  Residue.py  TODO.md  VERSION  __version__.txt  _pyproject.toml  _requirements.txt  backup_requirements.txt  binary_class_metrics_0.00.csv  commit.txt  condaenv.09zmuzf7.requirements.txt  condaenv.sn5g6lwf.requirements.txt  debug_display.py  debug_generate_for_class.py  disulfide_classes_table.tex  disulfide_octant_quantization.tex  docs.out  (+52 more)
.claude/: settings.json
.filetreekg/: graph.sqlite
.github/: docker_hub.yml  ghcr.yaml  publish-to-pypi.yml
.ipynb_checkpoints/: DisulfideAnalysis-checkpoint.ipynb
UNKNOWN.egg-info/: PKG-INFO
analysis/: doc_kg_analysis_20260322.md  filetreekg_analysis.md  proteusPy_analysis_20260310.md  proteusPy_analysis_20260323.md
benchmarks/: cifar10_manifold_architecture.py  cifar10_manifold_model.py  cifar10_manifold_model_results.json  digits_manifold_model.py  disulfide_flight_results.json  disulfide_flight_results_report.md  disulfide_flight_visualizer.py  disulfide_manifold_flight.py  iris_adam_vs_manifold.py  iris_benchmark_results.json  iris_manifold_adam_walker.py  iris_maw_results.json  mlp_expand_first.py  mnist_architecture_results.json  mnist_manifold_architecture.py  mnist_manifold_model.py  mnist_manifold_model_results.json  nomic_manifold_explorer.py  pepys_ch5_flight.py  pepys_ch5_flight_results.json  pepys_diverse_results.json  pepys_embedder.py  pepys_manifold_explorer.py  pepys_manifold_results.json  pepys_mpnet_manifold_results.json  pepys_small_results.json  pepys_temporal_flight.py  pepys_temporal_flight_results.json
data/: .gitattributes  PDB_SS_ALL_LOADER.pkl  PDB_SS_SUBSET_LOADER.pkl  PDB_SS_class_definitions.csv  PDB_SS_class_definitions.numbers  PDB_SS_classes_master2.csv  PDB_all_ss.pkl  PDB_all_ss_dict.pkl  PDB_all_ss_torsions.csv  PDB_ss_classes_master.numbers  PDB_subset_ss.pkl  PDB_subset_ss_dict.pkl  PDB_subset_torsions.csv  SS_consensus_class_32.pkl  SS_consensus_class_oct.pkl  SS_consensus_class_sext.pkl  __init__.py  binary_class.md  binary_class_metrics.pkl  octant_class_metrics.pkl  parse_pdb_header_egs.py  pdb_ids_240709.txt  ss_ids.txt
docs/: analysis_v0.99.62.md  disulfide_schematic_README.md  logo.html  proteusPy.html  search.js  the_turtle_who_learned_to_fly.md
documents/: SS_paper.html  SS_paper.md  a1.md  pdf  proteusPyJOSS.html  proteusPyJOSS.md
examples/: 06_04_protein_design_2.py  Anearest_relatives.ipynb  DisulfideClassesPlayground.ipynb  DisulfideLoader.ipynb  disulfide_schematic_example.py  energy_components_example.py
logo/: Untitled.xcf  logo_bs.xcf  proteuspy_logo1.xcf  proteuspy_text.xcf  ss_cpk_bkgd.xcf  ssbond_bs_blank1.xcf  ssbond_cpk_blank1.xcf
notebooks/: 2q7q.cif  Analysis2.ipynb  Analysis_2q7q.ipynb  Anearest_relatives.ipynb  Ascratch.ipynb  DisplaySS.ipynb  DisulfideAnalysis.ipynb  DisulfideClassDictCreator.ipynb  DisulfideClassPaper.ipynb  DisulfideClasses.ipynb  DisulfideClassesPlayground.ipynb  DisulfideDatabaseAnalysis.ipynb  DisulfideLoader.ipynb  DisulfidePaper.ipynb  DisulfidePlayground.ipynb  DisulfidePla… (3) - JupyterLab.html  Disulfide_checker.ipynb  Disulfide_cluster.ipynb  PDB_SS_ALL_LOADER.pkl  PDB_compress.ipynb  TruePDB_SS_ALL_LOADER.pkl  VTK.ipynb  ZZ_scratch.ipynb  api1.yml  b_create_vtk.ipynb  classes.csv  classes.md  classtest.ipynb  disulfide1.ipynb  energy_comparison.py  energy_components.py  gdownload.ipynb  geo_example.synch  minimize_dse.py  neighbors2.ipynb  pantest.ipynb  pdb1.ipynb  portfolio_analyzer.ipynb  pyvista.ipynb  rosetta.ipynb  (+7 more)
old/: DBViewer.py  DisulfideClass_Analysis_mp.py  DisulfideExtractor_threaded.py  build.yml  docker_hub.yml  ghcr.yaml  ppy.yml  ppy_0.95.0.txt  ppydev.txt  proteusPy.txt  proteusPy.yml  pyproject.toml  pyproject.toml.poetry  pyproject.toml.sav  pyproject.toml.setuptools  rcsb_viewer.py  setup.py  setup.py.sav
paper/: bs_cpk.xcf  db_creation.md  joss.bib  p.ipynb  paper.bib  paper.jats  paper.md  ppy.bib  proteusPyJOSS.md
programs/: ClassViewer.py  Class_Incidence.py  DBViewer.py  DBViewer2.py  DBViewer3.py  DBViewer3b.py  DBViewer4.py  DBViewer_Working.py  DBViewer_Working2.py  DBViewer_Working3.py  DBViewer_Working4.py  DBViewer_Working5.py  DisplaySS.py  DisplaySS2.py  DisulfideBondDisplay.py  DisulfideChecker.py  DisulfideClassAnalysisMP.py  DisulfideClassAnalysis_panel.py  DisulfideClassDictCreator.py  DisulfideClass_Analysis.py  DisulfideClass_Analysis2.py  DisulfideClass_Analysis_mp.py  DisulfideCluster.py  DisulfideDownloader.py  DisulfideExtractor.py  DisulfideExtractor2.py  DisulfideExtractor_mp.py  DisulfideExtractor_mp2.py  DisulfideExtractor_threaded.py  DisulfideLogo.py  DisulfidePruner.py  ODisulfideClass_Analysis.py  PruneDisulfides.py  README.md  README_disulfide_generation.md  Test_DisplaySS.py  actor.py  airprint.py  analyze_class_disulfides.py  bootstrapper.py  (+45 more)
proteus.orig/: Makefile  Makefile~  README.FIRST  atom.c  atom.h  atomtest.c  distmat.c  distmat.h  disulf_genetic.c  disulf_vdw.c  disulfide.c  disulfide.h  dmgen.c  geometry.c  geometry.h  geotest.c  keypop.c  keypop.h  phipsi.c  phipsi.h  protein.c  protein.h  protutil.c  protutil.h  residue.c  residue.h  ss_search.c  turtle.h  turtle2.c  turtle_test2.c
proteusPy/: .gitignore  CHANGELOG.md  Disulfide.py  DisulfideBase.py  DisulfideClassGenerator.py  DisulfideClassManager.py  DisulfideClass_Constructor.py  DisulfideClasses.py  DisulfideEnergy.py  DisulfideExceptions.py  DisulfideExtractor_mp.py  DisulfideGlobals.py  DisulfideIO.py  DisulfideList.py  DisulfideLoader.py  DisulfideStats.py  Plotting.py  (+37 more)
proteusPy-0.23.dev0/: MANIFEST.in  setup.cfg  setup.py
proteusPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+306 files in other folders)
