#
# pyproject.toml for the proteusPy Python package.
# Author: Eric G. Suchanek, PhD
# Last revision: 2025-01-18 16:30:08
#

[build-system]
requires = ["setuptools>=42", "wheel", "pytest-runner"]
build-backend = "setuptools.build_meta"

[project]
name = "proteusPy"
version = "0.99.3.pre"  # Replace with your version variable
description = "proteusPy - Protein Structure Analysis and Modeling Tools"
readme = "README.md"
authors = [
    {name = "Eric G. Suchanek, PhD", email = "suchanek@mac.com"}
]
license = {text = "BSD"}
requires-python = ">=3.12"
keywords = ["proteusPy", "suchanek", "disulfide"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "Bio",
    "colorama==0.4.6",
    "darkdetect==0.8.0",
    "gdown==5.2.0",
    "jupyter==1.1.1",
    "notebook==7.2.2",
    "nbconvert",
    "ipykernel",
    "ipywidgets",
    "jupyter_bokeh==4.0.5",
    "jupyter_contrib_nbextensions",
    "kaleido",
    "matplotlib==3.9.2",
    "numpy",
    "pandas",
    "panel==1.5.3",
    "param==2.1.1",
    "Pillow==11.0.0",
    "plotly==5.24.1",
    "plotly_express==0.4.1",
    "psutil",
    "pymolPy3==0.1.2",
    "Pympler==1.1",
    "pyvista[all]",
    "Requests==2.32.3",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "setuptools",
    "tabulate",
    "tqdm==4.67.0",
    "trame-jupyter-extension==2.1.3",
    "vtk",
    "wheel",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "twine",
    "pdoc",
    "wheel",
    "build",
]
bio = ["Biopython"]
pyqt5 = [
    "pyqt5",
    "pyvistaqt",
]
all = [
    "pytest",
    "coverage",
    "twine",
    "pdoc",
    "Biopython",
    "pyqt5",
    "pyvistaqt",
    "wheel",
    "build",
]

[project.urls]
Documentation = "https://suchanek.github.io/proteusPy/"
Source = "https://github.com/suchanek/proteusPy/"
Tracker = "https://github.com/suchanek/proteusPy/issues"

[tool.setuptools.packages.find]
include = ["proteusPy"]

[tool.setuptools.package-data]
proteusPy = [
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "data/pdb5rsa.ent",
    "data/ss_completed.txt",
    "data/ss_query.json",
    "data/ss_ids.txt",
    "data/SS_consensus_class_oct.pkl",
    "data/SS_consensus_class_32.pkl",
    "data/2q7q_seqsim.csv",
]

[tool.setuptools.exclude-package-data]
proteusPy = [
    "data/PDB_all_ss.pkl",
    "data/PDB_SS_ALL_LOADER.pkl",
    "data/PDB_SS_SUBSET_LOADER.pkl",
]

[project.scripts]
"proteusPy.qt5viewer" = "proteusPy.qt5viewer:main"
"proteusPy.DisulfideExtractor" = "proteusPy.DisulfideExtractor_mp:main"
"proteusPy.bootstrapper" = "proteusPy.bootstrapper:main"

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_DisplaySS.py"
